Criar posts funcionando e organizaçaõ de algumas validações de dados

--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -59,7 +59,7 @@
   {% if messages %}
       {% for message in messages %}
      
-              <div class="{{ message.tags}}" role="alert">{{ message }}</div>
+              <div class="alert {{ message.tags}}" role="alert">{{ message }}</div>
         
       {% endfor %}
   {% endif %}
