--- a/app/templates/comunidade.html
+++ b/app/templates/comunidade.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ comunidade.nome }}</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/milligram.cBase.css' %}" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="{% static 'css/milligram.evento.css' %}" />
@@ -97,6 +98,7 @@
       </div>
     </div>
     {%endfor%}  
+    
 
     <div class="fab">+</div>
 
@@ -109,7 +111,29 @@
 
 
 
+ <div class="popup evento">
+      <form action="{% url 'enviar_comunidade' comunidade.id carregar %}" method="POST" enctype="multipart/form-data">
+       
+        {% csrf_token %}
 
+        <h2>Criar post</h2>
+        
+        {% for message in messages%} 
+        <div class="alert {{ message.tags}}" role="alert">{{message}}</div>
+        {% endfor %}
+     
+
+<br>
+<textarea cols="40" name="conteudo" placeholder="Conteudo " required></textarea>
+
+<br>
+        <input name="foto"  type="file" placeholder="Foto do post" /><br>
+       
+        <button class="submit-btn" >Criar</button>
+   
+   
+  </form>
+     </div>
 
 
 
@@ -180,14 +204,12 @@
        
        <div> <input type="checkbox" name="termos_e_condicoes" id="" required>
          <label for="termos_e_condicoes">
-          Aceito os <a href="">termos de condições</a> permitindo que o material seje usado por terceiros
+          Aceito os <a href="">termos e condições</a> permitindo que o material seje usado por terceiros e confirmo que este material,caso seja um arquivo, é meu/de domínio público
         </label></div>
         <button class="submit-btn">Enviar</button>
       </div>
     </form>
-    </div>
-
-
+   
 
 
 
@@ -221,16 +243,26 @@
       {% for e in dados %}
         
       <section class="eventos">
+         
         <div class="evento-card">
+          <div  class="organizador">
+        Organizador da reunião:
+        <img src="{{ e.criador.foto.url }}" alt="{{ e.criador.username }}" class="foto-perfil avatar" />
+        <span class="nome-perfil">{{e.criador.username}}</span>
+       
+
+      </div>
           <h3>{{e.tematica}}</h3>
           <div class="descricao">
           {% if e.descricao  %}
           {{e.descricao}}
           {% else %}
-          Sem descrição
+          Reunião não possui uma  descrição
           {% endif %}
+     
         </div>
-          <div class="link-meet"><a href="{% if e.url|slice:':4' != 'http' %}https://{{ e.url }}{% else %}{{ e.url }}{% endif %}" target="_blank">{{e.url_da_reuniao}}</a></div>
+     
+          <div class="link-meet"><a href="{% if e.url_da_reuniao|slice:':4' != 'http' %}https://{{ e.url_da_reuniao }}{% else %}{{ e.url_da_reuniao }}{% endif %}" target="_blank">{{e.url_da_reuniao}}</a></div>
           <div class="info">
             <span class="data">{{ e.data_hora|date:"d \d\e F \d\e Y" }}</span>
             <span class="hora">Horario: {{ e.data_hora|time:"H:i" }}</span>
@@ -249,7 +281,7 @@
 
         <h2>Criar reunião</h2>
         {% for message in messages%} 
-        <div class="{{ message.tags}}" role="alert">{{message}}</div>
+        <div class="alert {{ message.tags}}" role="alert">{{message}}</div>
         {% endfor %}
         <input type="text" name="titulo" required placeholder="Título da reunião" />
 <br>
@@ -262,9 +294,10 @@
           <input name="hora" type="time" required/>
         </div>
         <button class="submit-btn">Criar</button>
-      </div>
-    </div>
+   
+   
   </form>
+     </div>
     {%endif%}
   </main>
 
