--- a/autenticacao/templates/login.html
+++ b/autenticacao/templates/login.html
@@ -25,7 +25,7 @@
       <div class="message" style="text-align: center;">
         {% if messages %}
           {% for message in messages%} 
-          <div class="{{ message.tags}}" role="alert">{{message}}</div>
+          <div class="alert {{ message.tags}}" role="alert">{{message}}</div>
           {% endfor %}
         {% endif %}
       </div>
