--- a/templates/static/css/milligram.evento.css
+++ b/templates/static/css/milligram.evento.css
@@ -54,6 +54,13 @@ body {
   padding: 15px;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
+.organizador{
+    background-color: #52848f;
+     border-radius: 15px 15px 0 0;
+  padding: 15px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+
+}
 
 .evento-card h3 {
   margin-bottom: 10px;
