Commit de alterações que não lembro o que

--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -117,7 +117,7 @@
           <select name="{{key}}" id="">
 
             {% for j in value %}
-            <option value="{{j}}" {% if j|stringformat:"s" in dados_usuario|dict_get:key %}selected{%endif%}>{{j}}
+            <option value="{{j}}" {% if j|stringformat:"s" in dados_usuario|dict_get:key %}selected{%endif%}>{{j.nome}}
             </option>
 
             {%endfor%}
