--- a/app/templates/filtrado.html
+++ b/app/templates/filtrado.html
@@ -6,6 +6,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comunidades</title>
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <link rel="stylesheet" href="{% static 'css/milligram.cGeral.css' %}" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
@@ -27,6 +30,8 @@
     </header>
 
   <div class="container">
+                  <button class="alert alert-danger" role="alert" onclick="window.location ='/app/' ">Voltar</button>
+
       <section class="recommended">
       <h2>Comunidades filtradas:</h2>
       <div class="card-group" >
