--- a/app/templates/comuComentario.html
+++ b/app/templates/comuComentario.html
@@ -1,12 +1,39 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Comentários</title>
+    <link rel="stylesheet" href="{% static 'css/milligram.come.css' %}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
-    
+
+<div class="top-bar">
+    <div class="back">←</div>
+</div>
+
+<div class="feed">
+    <div class="post">
+        <div class="icon">nomeperfil</div>
+        <div class="content-box">espaço pro comentário</div>
+    </div>
+
+    <div class="post">
+        <div class="icon">nomeperfil</div>
+        <div class="content-box">conteúdopostagem</div>
+    </div>
+
+    <div class="post">
+        <div class="icon">nomeperfil</div>
+        <div class="content-box">conteúdopostagem</div>
+    </div>
+</div>
+
+<div class="bottom-comment">
+    <input type="text" placeholder="espaço pra comentar" />
+</div>
+
 </body>
 </html>
