--- a/app/templates/comunidade.html
+++ b/app/templates/comunidade.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load custom_tags %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -68,6 +70,29 @@
 
     {% if carregar == 'posts' %}
     
+ <div class="popup evento">
+      <form action="{% url 'enviar_comunidade' comunidade.id carregar %}" method="POST" enctype="multipart/form-data">
+       
+        {% csrf_token %}
+
+        <h2>Criar post</h2>
+        
+        {% for message in messages%} 
+        <div class="alert {{ message.tags}}" role="alert">{{message}}</div>
+        {% endfor %}
+     
+
+<br>
+<textarea cols="40" name="conteudo" placeholder="Conteudo " required></textarea>
+
+<br>
+        <input name="foto"  type="file" placeholder="Foto do post" /><br>
+       
+        <button class="submit-btn" >Criar</button>
+   
+   
+  </form>
+     </div>
     
      {% for post in dados %}
     <div class="post">
@@ -94,13 +119,57 @@
     
       <div class="post-acoes">  
 
-        <button class="btn-coment">💬</button>
+        <button class="btn-coment btn-coment-{{post.id}}">💬</button></div>
+        <div class="feed-{{post.id}}" style="display: none;">
+                  
+<div class="feed">
+    <div class="post">
+      {% for coment in post.id|filtrar_comentarios %}
+        <div class="iconpo"><img style="width: 25px; height: 25px; border-radius: 50%;object-fit: cover;" src="{{coment.usuario.foto.url}}" alt="fotoDequemFezOpost"> {{coment.usuario}}</div>
+        <div class="content-box">{{coment.conteudo}}</div>
+    {%endfor%}
+
       </div>
+
+</div>
+
+<div class="bottom-comment">
+    <form action="{% url 'comentar' post.id %}" method="POST">
+        {% csrf_token %}
+      <div style="display: flex;"><input type="text" placeholder="espaço pra comentar"  name="comentario"/></form>
+                      <button  style="margin-right: 25px;" class="btn-coment">Enviar</button>    </div>
+     
+</div>
+</div>
+        </div>
+        <script>
+           document.querySelector('.btn-coment-{{post.id}}').addEventListener('click', ()=>{
+            let feed = document.querySelector('.feed-{{post.id}}')
+          document.querySelector('.btn-coment-{{post.id}}').innerHTML =  '💬'
+
+            if(feed.style.display == 'block'){
+              feed.style.display = 'none'
+            }else{
+              feed.style.display = 'block'
+              document.querySelector('.btn-coment-{{post.id}}').innerHTML =  '🔼'
+            }
+           })
+        </script>
+
+        
+  
     </div>
     {%endfor%}  
     
      
-          <div class="fab">+</div>
+          <div class="fab fab_voltar_em_cima">+</div>
+          <script>
+            let fab_voltar_em_cima = document.querySelector('.fab_voltar_em_cima')
+            fab_voltar_em_cima.addEventListener('click', ()=>{
+              window.scrollTo({ top: 0, behavior: "smooth" });
+
+            })
+          </script>
     
 
    
@@ -112,29 +181,6 @@
 
 
 
- <div class="popup evento">
-      <form action="{% url 'enviar_comunidade' comunidade.id carregar %}" method="POST" enctype="multipart/form-data">
-       
-        {% csrf_token %}
-
-        <h2>Criar post</h2>
-        
-        {% for message in messages%} 
-        <div class="alert {{ message.tags}}" role="alert">{{message}}</div>
-        {% endfor %}
-     
-
-<br>
-<textarea cols="40" name="conteudo" placeholder="Conteudo " required></textarea>
-
-<br>
-        <input name="foto"  type="file" placeholder="Foto do post" /><br>
-       
-        <button class="submit-btn" >Criar</button>
-   
-   
-  </form>
-     </div>
 
 
 
@@ -164,7 +210,25 @@
         <button class="active">materiais</button>
         <button>eventos</button>
       </nav> -->
+  <form action="{% url 'enviar_comunidade' comunidade.id carregar %}" method="POST" enctype="multipart/form-data">
+      
+            {% csrf_token %}
 
+        <div class="popup material">
+        <h2>Mandar Material</h2>
+        <input name="titulo" type="text" placeholder="Título do material" />
+          <input name="ext" type="text" placeholder="Que tipo de arquivo você esta mandando preciso colcoar um selec aquinão fiz nada aqui ainda" />
+
+        <textarea name="descricao" placeholder="Descrição do material"></textarea>
+        <input name="material" type="file" placeholder="escolha um arquivo" />
+       
+       <div> <input type="checkbox" name="termos_e_condicoes" id="" required>
+         <label for="termos_e_condicoes">
+          Aceito os <a href="">termos e condições</a> permitindo que o material seje usado por terceiros e confirmo que este material,caso seja um arquivo, é meu/de domínio público
+        </label></div>
+        <button class="submit-btn">Enviar</button>
+      </div>
+    </form>
       <section class="materiais">
         {% for material in dados %}
         <div class="card">
@@ -189,33 +253,22 @@
       
       </section>
 
-      <button class="add-btn"><i class="fab fa-plus"></i></button>
+      <button class="add-btn fab_voltar_em_cima"><i class="fab fa-plus"></i></button>
 
-    <form action="{% url 'enviar_comunidade' comunidade.id carregar %}" method="POST" enctype="multipart/form-data">
-      
-            {% csrf_token %}
 
-        <div class="popup material">
-        <h2>Mandar Material</h2>
-        <input name="titulo" type="text" placeholder="Título do material" />
-          <input name="ext" type="text" placeholder="Que tipo de arquivo você esta mandando preciso colcoar um selec aquinão fiz nada aqui ainda" />
-
-        <textarea name="descricao" placeholder="Descrição do material"></textarea>
-        <input name="material" type="file" placeholder="escolha um arquivo" />
-       
-       <div> <input type="checkbox" name="termos_e_condicoes" id="" required>
-         <label for="termos_e_condicoes">
-          Aceito os <a href="">termos e condições</a> permitindo que o material seje usado por terceiros e confirmo que este material,caso seja um arquivo, é meu/de domínio público
-        </label></div>
-        <button class="submit-btn">Enviar</button>
-      </div>
-    </form>
+  
    
 
 
 
 
+     <script>
+            let fab_voltar_em_cima2 = document.querySelector('.fab_voltar_em_cima')
+            fab_voltar_em_cima2.addEventListener('click', ()=>{
+              window.scrollTo({ top: 0, behavior: "smooth" });
 
+            })
+          </script>
 
 
 
@@ -242,7 +295,31 @@
     <div class="container">
     
       {% for e in dados %}
-        
+      
+      <div class="popup evento">
+      <form action="{% url 'enviar_comunidade' comunidade.id carregar %}" method="POST" enctype="multipart/form-data">
+       
+        {% csrf_token %}
+
+        <h2>Criar reunião</h2>
+        {% for message in messages%} 
+        <div class="alert {{ message.tags}}" role="alert">{{message}}</div>
+        {% endfor %}
+        <input type="text" name="titulo" required placeholder="Título da reunião" />
+<br>
+<textarea name="descricao" placeholder="Descrição da reunião"></textarea>
+
+<br>
+        <input name="url_da_reuniao" required type="text" placeholder="Link do Google Meet" />
+        <div class="inline-fields">
+          <input name="data" type="date" required/>
+          <input name="hora" type="time" required/>
+        </div>
+        <button class="submit-btn">Criar</button>
+   
+   
+  </form>
+     </div>  
       <section class="eventos">
          
         <div class="evento-card">
@@ -273,32 +350,15 @@
 
       </section>
 
-      <button class="add-btn"  {%if request.user.pontuacao < 4 %}  style="opacity: 0.4;cursor: not-allowed !important;"{%endif%} ><i class="fab fa-plus" {%if request.user.pontuacao < 4 %}  style="opacity: 0.4;cursor: not-allowed !important;"{%endif%}></i></button>
+      <button class="add-btn fab_voltar_em_cima"  {%if request.user.pontuacao < 4 %}  style="opacity: 0.4;cursor: not-allowed !important;"{%endif%} ><i class="fab fa-plus" {%if request.user.pontuacao < 4 %}  style="opacity: 0.4;cursor: not-allowed !important;"{%endif%}></i></button>
 
-      <div class="popup evento">
-      <form action="{% url 'enviar_comunidade' comunidade.id carregar %}" method="POST" enctype="multipart/form-data">
-       
-        {% csrf_token %}
+     <script>
+            let fab_voltar_em_cima3 = document.querySelector('.fab_voltar_em_cima')
+            fab_voltar_em_cima3.addEventListener('click', ()=>{
+              window.scrollTo({ top: 0, behavior: "smooth" });
 
-        <h2>Criar reunião</h2>
-        {% for message in messages%} 
-        <div class="alert {{ message.tags}}" role="alert">{{message}}</div>
-        {% endfor %}
-        <input type="text" name="titulo" required placeholder="Título da reunião" />
-<br>
-<textarea name="descricao" placeholder="Descrição da reunião"></textarea>
-
-<br>
-        <input name="url_da_reuniao" required type="text" placeholder="Link do Google Meet" />
-        <div class="inline-fields">
-          <input name="data" type="date" required/>
-          <input name="hora" type="time" required/>
-        </div>
-        <button class="submit-btn">Criar</button>
-   
-   
-  </form>
-     </div>
+            })
+          </script>
     {%endif%}
   </main>
 
